vmmjava/vmm/internal/VmmNative.java

		
		VMMDLL_MAP_HEAP(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_HEAPENTRY[1];
			pSegments = new VMMDLL_MAP_HEAP_SEGMENTENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_HEAP_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_HEAPENTRY[cMap];
			pSegments = new VMMDLL_MAP_HEAP_SEGMENTENTRY[cSegments];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetHeap(Pointer hVMM, int dwPID, PointerByReference ppHeapMap);
	
	
	
	@Structure.FieldOrder({"va", "cb", "tp"})
	class VMMDLL_MAP_HEAPALLOCENTRY extends Structure {
		public long va;
		public int cb;
		public int tp;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "_Reserved2", "cMap", "pMap"})
	class VMMDLL_MAP_HEAPALLOC extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[7];
		public Pointer[] _Reserved2 = new Pointer[2];
		public int cMap;
		public VMMDLL_MAP_HEAPALLOCENTRY[] pMap;
		
		VMMDLL_MAP_HEAPALLOC(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_HEAPALLOCENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_HEAPALLOC_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_HEAPALLOCENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetHeapAlloc(Pointer hVMM, int dwPID, long qwHeapNumOrAddress, PointerByReference ppHeapAllocMap);

	
	
	@Structure.FieldOrder({"vaBase", "cPages", "fPage", "fWow64", "_FutureUse1", "uszText", "_Reserved1", "cSoftware"})
	class VMMDLL_MAP_PTEENTRY extends Structure {
		public long vaBase;
		public long cPages;
		public long fPage;
		public boolean fWow64;
		public int _FutureUse1;
		public String uszText;
		public int _Reserved1;
		public int cSoftware;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "pbMultiText", "cbMultiText", "cMap", "pMap"})
	class VMMDLL_MAP_PTE extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[5];
		public Pointer pbMultiText;
		public int cbMultiText;
		public int cMap;
		public VMMDLL_MAP_PTEENTRY[] pMap;
		
		VMMDLL_MAP_PTE(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_PTEENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_PTE_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_PTEENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetPteU(Pointer hVMM, int dwPID, boolean fIdentifyModules, PointerByReference ppPteMap);
	
	
	
	@Structure.FieldOrder({"dwTID", "dwPID", "dwExitStatus", "bState", "bRunning", "bPriority", "bBasePriority", "vaETHREAD", "vaTeb", "ftCreateTime", "ftExitTime", "vaStartAddress", "vaStackBaseUser", "vaStackLimitUser", "vaStackBaseKernel", "vaStackLimitKernel", "vaTrapFrame", "vaRIP", "vaRSP", "qwAffinity", "dwUserTime", "dwKernelTime", "bSuspendCount", "bWaitReason", "_FutureUse1", "_FutureUse2", "vaImpersonationToken", "vaWin32StartAddress"})
	class VMMDLL_MAP_THREADENTRY extends Structure {
	    public int dwTID;
	    public int dwPID;
	    public int dwExitStatus;
	    public byte bState;
	    public byte bRunning;
	    public byte bPriority;
	    public byte bBasePriority;
	    public long vaETHREAD;
	    public long vaTeb;
	    public long ftCreateTime;
	    public long ftExitTime;
	    public long vaStartAddress;
	    public long vaStackBaseUser;
	    public long vaStackLimitUser;
	    public long vaStackBaseKernel;
	    public long vaStackLimitKernel;
	    public long vaTrapFrame;
	    public long vaRIP;
	    public long vaRSP;
	    public long qwAffinity;
	    public int dwUserTime;
	    public int dwKernelTime;
	    public byte bSuspendCount;
	    public byte bWaitReason;
	    public byte[] _FutureUse1 = new byte[2];
	    public int[] _FutureUse2 = new int[11];
	    public long vaImpersonationToken;
	    public long vaWin32StartAddress;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved", "cMap", "pMap"})
	class VMMDLL_MAP_THREAD extends Structure {
		public int dwVersion;
		public int[] _Reserved = new int[8];
		public int cMap;
		public VMMDLL_MAP_THREADENTRY[] pMap;
		
		VMMDLL_MAP_THREAD(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_THREADENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_THREAD_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_THREADENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetThread(Pointer hVMM, int dwPID, PointerByReference ppThreadMap);
	

	
	@Structure.FieldOrder({"vaBase", "cbImageSize", "fWow64", "uszText", "_FutureUse1", "dwCheckSum", "dwTimeDateStamp", "ftUnload"})
	class VMMDLL_MAP_UNLOADEDMODULEENTRY extends Structure {
		public long vaBase;
		public int cbImageSize;
		public boolean fWow64;
		public String uszText;
		public int _FutureUse1;
		public int dwCheckSum;
		public int dwTimeDateStamp;
		public long ftUnload;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "pbMultiText", "cbMultiText", "cMap", "pMap"})
	class VMMDLL_MAP_UNLOADEDMODULE extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[5];
		public Pointer pbMultiText;
		public int cbMultiText;
		public int cMap;
		public VMMDLL_MAP_UNLOADEDMODULEENTRY[] pMap;
		
		VMMDLL_MAP_UNLOADEDMODULE(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_UNLOADEDMODULEENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_UNLOADEDMODULE_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_UNLOADEDMODULEENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetUnloadedModuleU(Pointer hVMM, int dwPID, PointerByReference ppUnloadedModuleMap);
	

	
	@Structure.FieldOrder({"vaStart", "vaEnd", "vaVad", "dw0", "dw1", "dwu2", "cbPrototypePte", "vaPrototypePte", "vaSubsection", "uszText", "_FutureUse1", "_Reserved1", "vaFileObject", "cVadExPages", "cVadExPagesBase", "_Reserved2"})
	class VMMDLL_MAP_VADENTRY extends Structure {
		public long vaStart;
		public long vaEnd;
		public long vaVad;
		public int dw0;
		public int dw1;
		public int dwu2;
		public int cbPrototypePte;
		public long vaPrototypePte;
		public long vaSubsection;
		public String uszText;
		public int _FutureUse1;
		public int _Reserved1;
		public long vaFileObject;
		public int cVadExPages;
		public int cVadExPagesBase;
		public long _Reserved2;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "cPage", "pbMultiText", "cbMultiText", "cMap", "pMap"})
	class VMMDLL_MAP_VAD extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[4];
		public int cPage;
		public Pointer pbMultiText;
		public int cbMultiText;
		public int cMap;
		public VMMDLL_MAP_VADENTRY[] pMap;
		
		VMMDLL_MAP_VAD(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_VADENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_VAD_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_VADENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetVadU(Pointer hVMM, int dwPID, boolean fIdentifyModules, PointerByReference ppVadMap);

	
	
	@Structure.FieldOrder({"tp", "iPML", "pteFlags", "_Reserved2", "va", "pa", "pte", "_Reserved1", "proto_tp", "proto_pa", "proto_pte", "vaVadBase"})
	class VMMDLL_MAP_VADEXENTRY extends Structure {
		public int tp;
		public byte iPML;
		public byte pteFlags;
		public short _Reserved2;
		public long va;
		public long pa;
		public long pte;
		public int _Reserved1;
		public int proto_tp;
		public long proto_pa;
		public long proto_pte;
		public long vaVadBase;
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "cMap", "pMap"})
	class VMMDLL_MAP_VADEX extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[4];
		public int cMap;
		public VMMDLL_MAP_VADEXENTRY[] pMap;
		
		VMMDLL_MAP_VADEX(Pointer p)
		{
			super(p);
			pMap = new VMMDLL_MAP_VADEXENTRY[1];
			read();
			if(dwVersion != VmmNative.VMMDLL_MAP_VADEX_VERSION) { throw new VmmException("Bad Version"); }
			pMap = new VMMDLL_MAP_VADEXENTRY[cMap];
			read();
		}
	}
	
	boolean VMMDLL_Map_GetVadEx(Pointer hVMM, int dwPID, int oPage, int cPage, PointerByReference ppVadExMap);
	
	
	
	static final int VMMDLL_PROCESS_INFORMATION_OPT_STRING_PATH_KERNEL 		= 1;
	static final int VMMDLL_PROCESS_INFORMATION_OPT_STRING_PATH_USER_IMAGE 	= 2;
	static final int VMMDLL_PROCESS_INFORMATION_OPT_STRING_CMDLINE 			= 3;
	
	@Structure.FieldOrder({"magic", "wVersion", "wSize", "tpMemoryModel", "tpSystem", "fUserOnly", "dwPID", "dwPPID", "dwState", "szName", "szNameLong", "paDTB", "paDTB_UserOpt", "vaEPROCESS", "vaPEB", "_Reserved1", "fWow64", "vaPEB32", "dwSessionId", "qwLUID", "szSID", "IntegrityLevel"})
	class VMMDLL_PROCESS_INFORMATION extends Structure {
		public long magic;
		public short wVersion;
		public short wSize;
		public int tpMemoryModel;
		public int tpSystem;
		public boolean fUserOnly;
		public int dwPID;
		public int dwPPID;
		public int dwState;
		public byte[] szName = new byte[16];
		public byte[] szNameLong = new byte[64];
		public long paDTB;
		public long paDTB_UserOpt;
		// win below;
		public long vaEPROCESS;
		public long vaPEB;
		public long _Reserved1;
		public boolean fWow64;
		public int vaPEB32;
		public int dwSessionId;
		public long qwLUID;
		public byte[] szSID = new byte[MAX_PATH];
		public int IntegrityLevel;
	}
	
	boolean VMMDLL_ProcessGetInformation(Pointer hVMM, int dwPID, VMMDLL_PROCESS_INFORMATION pProcessInformation, LongByReference pcbProcessInformation);
	Pointer VMMDLL_ProcessGetInformationString(Pointer hVMM, int dwPID, int fOptionString);
	
	
	
	static final int VMMDLL_MODULE_FLAG_NORMAL           	= 0;
	static final int VMMDLL_MODULE_FLAG_DEBUGINFO        	= 1;
	static final int VMMDLL_MODULE_FLAG_VERSIONINFO      	= 2;
	
	@Structure.FieldOrder({"dwAge", "_Reserved", "Guid", "uszGuid", "uszPdbFilename"})
	class VMMDLL_MAP_MODULEENTRY_DEBUGINFO extends Structure {
		public int dwAge;
		public int _Reserved;
		public byte[] Guid = new byte[16];
		public String uszGuid;
		public String uszPdbFilename;
		
		
		public VMMDLL_MAP_MODULEENTRY_DEBUGINFO()
		{
			super();
		}
		
		VMMDLL_MAP_MODULEENTRY_DEBUGINFO(Pointer p)
		{
			super(p);
			read();
		}
	}
	
	@Structure.FieldOrder({"uszCompanyName", "uszFileDescription", "uszFileVersion", "uszInternalName", "uszLegalCopyright", "uszOriginalFilename", "uszProductName", "uszProductVersion"})
	class VMMDLL_MAP_MODULEENTRY_VERSIONINFO extends Structure {
		public String uszCompanyName;
		public String uszFileDescription;
		public String uszFileVersion;
		public String uszInternalName;
		public String uszLegalCopyright;
		public String uszOriginalFilename;
		public String uszProductName;
		public String uszProductVersion;
		
		
		public VMMDLL_MAP_MODULEENTRY_VERSIONINFO()
		{
			super();
		}
		
		VMMDLL_MAP_MODULEENTRY_VERSIONINFO(Pointer p)
		{
			super(p);
			read();
		}
	}
	
	@Structure.FieldOrder({"vaBase", "vaEntry", "cbImageSize", "fWoW64", "uszText", "_Reserved3", "_Reserved4", "uszFullName", "tp", "cbFileSizeRaw", "cSection", "cEAT", "cIAT", "_Reserved2", "_Reserved1", "pExDebugInfo", "pExVersionInfo"})
	class VMMDLL_MAP_MODULEENTRY extends Structure {
		public long vaBase;
		public long vaEntry;
		public int cbImageSize;
		public boolean fWoW64;
		public String uszText;
		public int _Reserved3;
		public int _Reserved4;
		public String uszFullName;
		public int tp;
		public int cbFileSizeRaw;
		public int cSection;
		public int cEAT;
		public int cIAT;
		public int _Reserved2;
		public long[] _Reserved1 = new long[3];
		public long pExDebugInfo;
		public long pExVersionInfo;
		
		public VMMDLL_MAP_MODULEENTRY()
		{
			super();
		}
		
		VMMDLL_MAP_MODULEENTRY(Pointer p)
		{
			super(p);
			read();
		}
	}
	
	@Structure.FieldOrder({"dwVersion", "_Reserved1", "pbMultiText", "cbMultiText", "cMap", "pMap"})
	class VMMDLL_MAP_MODULE extends Structure {
		public int dwVersion;
		public int[] _Reserved1 = new int[5];
		public Pointer pbMultiText;
		public int cbMultiText;
		public int cMap;
		public VMMDLL_MAP_MODULEENTRY[] pMap;
